# backtesting

./: backtester.py  data_collector.py  database.py  main.py  models.py  optimizer.py  utils.py
backtestingCpp/: CMakeLists.txt  Database.cpp  Database.h  Utils.cpp  Utils.h  main.cpp
backtestingCpp/strategies/: Psar.cpp  Psar.h  Sma.cpp  Sma.h
exchanges/: binance.py
strategies/: ichimoku.py  obv.py  support_resistance.py
